--- a/public/index.html
+++ b/public/index.html
@@ -479,7 +479,7 @@
 
         .num {
             color: white;
-            font:bold 35px Helvetica, Arial, Sans-Serif;
+            font: bold 35px Helvetica, Arial, Sans-Serif;
             text-align: center;
         }
 
@@ -500,7 +500,7 @@
             top: 983px;
             z-index: 2;
             color: #fbff00;
-            font:bold 47px Helvetica, Arial, Sans-Serif;
+            font: bold 47px Helvetica, Arial, Sans-Serif;
             text-align: center;
             left: 567px;
             width: 320px;
@@ -525,7 +525,7 @@
 
         .points {
             color: #fff900;
-            font:bold 37px Helvetica, Arial, Sans-Serif;
+            font: bold 37px Helvetica, Arial, Sans-Serif;
             margin-top: 20px;
         }
 
@@ -598,6 +598,7 @@
                 border-radius: 0px;
             }
         }
+
         /*img[id^='sodRow'] {*/
         /*    animation: blinker 0.7s linear infinite;*/
         /*}*/
@@ -761,7 +762,8 @@
 </div>
 
 <!--主界面EDAll-->
-<div class="WindowFrame" id="dAll" style="position:absolute;top:0;width:1060px;background-color:#000; transform: rotateY(180deg);">
+<div class="WindowFrame" id="dAll"
+     style="position:absolute;top:0;width:1060px;background-color:#000; transform: rotateY(180deg);">
     <!--背景图片-->
     <div style="position:absolute;width:1560px;height:600px;display:none;z-index:0" id="tGround"></div>
     <!--左边卡片列-->
@@ -904,9 +906,16 @@
 </div>
 
 <div class="profile">
-    <img id="topAvatar" src="images/leaderBoard.png" alt="" class="photo">
+    <img id="topAvatar" src="images/Zombies/avataZombie2.png" alt="" class="photo">
     <img id="background" src="images/surface.png" alt="" class="photoTopBg">
     <p id="topName" class="topName">Zombie</p>
+    <p style="
+    position: absolute;
+    top: 575px;
+    z-index: 2;
+    color: #fbff00;
+    font: bold 33px Helvetica, Arial, Sans-Serif;
+    text-align: center;">Mọi người like, follow, share hoặc tặng quà để chơi nhé</p>
 </div>
 
 <script type="text/javascript">
