--- a/public/index.html
+++ b/public/index.html
@@ -911,11 +911,18 @@
     <p id="topName" class="topName">Zombie</p>
     <p style="
     position: absolute;
-    top: 575px;
+    top: 565px;
     z-index: 2;
     color: #fbff00;
-    font: bold 33px Helvetica, Arial, Sans-Serif;
-    text-align: center;">Mọi người like, follow, share hoặc tặng quà để chơi nhé</p>
+    font: bold 44px Helvetica, Arial, Sans-Serif;
+    text-align: center;">Like, follow, share, tặng quà để tạo Zombie</p>
+    <img src="images/heartfly.gif" style="
+    position: absolute;
+    z-index: 10;
+    width: 400px;
+    height: 400px;
+    left: 695px;
+">
 </div>
 
 <script type="text/javascript">
