--- a/public/index.html
+++ b/public/index.html
@@ -906,6 +906,22 @@
 </div>
 
 <div class="profile">
+    <div class="inputFields" id="formInput" style="
+    position: absolute;
+    z-index: 10;
+    left: 88px;
+    top: 685px;">
+
+        <input type="text" id="uniqueIdInput" style="
+    width: 300px;
+    font-size: 40px;">
+        <input type="button" id="connectButton" value="connect"
+                style="
+    width: 150px;
+    height: 50px;
+    font-size: 30px;">
+
+    </div>
     <img id="topAvatar" src="images/Zombies/avataZombie2.png" alt="" class="photo">
     <img id="background" src="images/surface.png" alt="" class="photoTopBg">
     <p id="topName" class="topName">Zombie</p>
